@@ -1,8 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/Index_calculations.r
+% Please edit documentation in R/Index_calculations.r, R/ia_jackknife.R
 \name{ia}
 \alias{ia}
 \alias{pair.ia}
+\alias{resample.ia}
+\alias{jack.ia}
 \title{Index of Association}
 \usage{
 ia(gid, sample = 0, method = 1, quiet = FALSE, missing = "ignore",
@@ -10,6 +12,10 @@ ia(gid, sample = 0, method = 1, quiet = FALSE, missing = "ignore",
 
 pair.ia(gid, quiet = FALSE, plot = TRUE, low = "blue", high = "red",
   limits = NULL, index = "rbarD")
+
+resample.ia(gid, n = NULL, reps = 999, quiet = FALSE)
+
+jack.ia(...)
 }
 \arguments{
 \item{gid}{a \code{\link{genind}} or \code{\link{genclone}} object.}
@@ -52,6 +58,14 @@ TRUE}}
 \item{limits}{(for pair.ia) the limits to be used for the color scale. 
 Defaults to \code{NULL}. If you want to use a custom range, supply two
 numbers between -1 and 1, (e.g. \code{limits = c(-0.15, 1)})}
+
+\item{n}{an integer specifying the number of samples to be drawn. Defaults to
+\code{NULL}, which then uses the number of multilocus genotypes.}
+
+\item{reps}{an integer specifying the number of replicates to perform.
+Defaults to 999.}
+
+\item{...}{arguments to be passed on to resample.ia}
 }
 \value{
 \subsection{for \code{pair.ia}}{
@@ -84,15 +98,24 @@ numbers between -1 and 1, (e.g. \code{limits = c(-0.15, 1)})}
     rbarD, respectively.}
   }
   }
+
+\subsection{resample.ia()}{a data frame with the index of association and standardized index of
+association in columns. Number of rows represents the number of reps.}
 }
 \description{
-Calculate the Index of Association and Standardized Index of Association. 
-Obtain p-values from one-sided permutation tests.
+Calculate the Index of Association and Standardized Index of Association.
+\itemize{
+  \item \code{ia()} calculates the index of association over all loci in
+  the data set.
+  \item \code{pair.ia()} calculates the index of association in a pairwise
+  manner among all loci.
+  \item  \code{resample.ia()} calculates the index of association on a
+  reduced data set multiple times to create a distribution, showing the
+  variation of values observed at a given sample size (previously 
+  \code{jack.ia}).
+}
 }
 \details{
-The function \code{ia} will calculate the index of association over all loci in the data set while
-\code{pair.ia} will calculate the index in a pairwise manner among all loci.
-
 The index of association was originally developed by A.H.D. Brown 
   analyzing population structure of wild barley (Brown, 1980). It has been widely 
   used as a tool to detect clonal reproduction within populations . 
@@ -162,6 +185,10 @@ The index of association was originally developed by A.H.D. Brown
   \sum_{j=1}^{m}\displaystyle \sum_{k \neq j}^{m}\sqrt{var_j\cdot{}var_k}} 
   }{rbarD = (Vo - Ve)/(2*sum(sum(sqrt(var(dj)*var(dk))))}
 }
+\note{
+\code{jack.ia()} is deprecated as the name was misleading. Please use
+  \code{resample.ia()}
+}
 \examples{
 data(nancycats)
 ia(nancycats)
@@ -171,7 +198,20 @@ data(partial_clone)
 res <- pair.ia(partial_clone)
 plot(res, low = "black", high = "green", index = "Ia")
 
+# Resampling
+data(Pinf)
+resample.ia(Pinf, reps = 99)
+
 \dontrun{
+
+# Plot the results of resampling rbarD. 
+library("ggplot2")
+Pinf.resamp <- resample.ia(Pinf, reps = 999)
+ggplot(Pinf.resamp[2], aes(x = rbarD)) +
+  geom_histogram() +
+  geom_vline(xintercept = ia(Pinf)[2]) +
+  geom_vline(xintercept = ia(clonecorrect(Pinf))[2], linetype = 2) +
+  xlab(expression(bar(r)[d]))
 
 # Get the indices back and plot the distributions.
 nansamp <- ia(nancycats, sample = 999, valuereturn = TRUE)
